# TuyaOpen

./: COMPILE_AND_BURN_GUIDE.md  build_t5ai.ps1
apps/aliyun_cloud/aliyun_demo/: CMakeLists.txt
apps/aliyun_cloud/aliyun_demo/include/: aliyun_test_api.h
apps/aliyun_cloud/aliyun_demo/src/: tuya_config.h  tuya_main.c
apps/tuya.ai/ai_components/ai_ui/: Kconfig
apps/tuya.ai/your_chat_bot/: CMakeLists.txt  Kconfig  app_default.config
apps/tuya.ai/your_chat_bot/config/: TUYA_T5AI_BOARD_LCD_3.5.config  TUYA_T5AI_BOARD_LCD_3.5_CAMERA.config  (+3 more)
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/: CMakeLists.txt  README.md  app_default.config
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/config/: TUYA_T5AI_EINK_NFC.config
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/examples/: nfc-emulate-forum-tag2.c  nfc-emulate-wifi-config.c
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/include/buses/: uart.h
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/include/chips/: pn53x-internal.h  pn53x.h
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/include/core/: config.h  err.h  iso7816.h  log-internal.h  log.h  mirror-subr.h  nfc-internal.h  platform_compat.h  target-subr.h
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/include/nfc/: nfc-emulation.h  nfc-types.h  nfc.h
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/include/utils/: nfc-utils.h
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/src/buses/: uart.c
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/src/chips/: pn53x.c
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/src/core/: iso14443-subr.c  log-internal.c  log.c  mirror-subr.c  nfc-device.c  nfc-emulation.c  nfc-internal.c  nfc.c  platform_compat.c  target-subr.c
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/src/drivers/: pn532_uart.c
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/libnfc/src/utils/: nfc-utils.c
apps/tuya_t5_eink_nfc/eink_nfc_emulate_demo/src/: nfc_emulate_main.c
apps/tuya_t5_pocket/tuya_t5_pocket_ai/: CMakeLists.txt  Kconfig  app_default.config
boards/: Kconfig
boards/ESP32/WAVESHARE_ESP32S3_Touch_AMOLED_1.8/: Kconfig
boards/L511C/: Kconfig  OS_SERVICE_Kconfig  TKL_Kconfig
boards/L511C/L511C_EVB/: Kconfig
boards/L511C/config/: L511C.config
boards/T5AI/: Kconfig  TKL_Kconfig
boards/T5AI/ATK_T5AI_MINI_BOARD/: Kconfig  board_ex_module.c  board_ex_module.h
boards/T5AI/TUYA_T5AI_BOARD/: Kconfig  tuya_t5ai_ex_module.c  tuya_t5ai_ex_module.h
boards/T5AI/TUYA_T5AI_EINK_NFC/: tuya_t5ai_eink_nfc.c
boards/T5AI/TUYA_T5AI_POCKET/: Kconfig  tuya_t5ai_pocket.c
examples/peripherals/adc/: README.md  README_CN.md
examples/peripherals/gpio/: Kconfig
examples/peripherals/pwm/: README.md  README_CN.md
examples/peripherals/touch/: README.md  README_CN.md
examples/spectral_poc/: CMakeLists.txt  README.md  app_default.config
examples/spectral_poc/src/: tuya_app_main.c
examples/tflite/tflite-helloworld/: CMakeLists.txt
local_packages/charset_normalizer-3.4.4.dist-info/: RECORD
local_packages/click_completion-0.5.2.dist-info/: METADATA  RECORD
local_packages/click_option_group-0.5.9.dist-info/: RECORD
local_packages/cmake-4.2.1.dist-info/: RECORD
local_packages/kconfiglib-14.1.0.dist-info/: RECORD
local_packages/ninja-1.13.0.dist-info/: RECORD
platform/: platform_config.yaml
src/: Kconfig
src/audio_player/: CMakeLists.txt  Kconfig
src/audio_player/include/: svc_ai_player.h
src/audio_player/src/: ai_player.h  svc_ai_player.c  svc_ai_playlist.c
src/audio_player/src/consumer/: consumer_speaker.c
src/audio_player/src/datasink/: ai_player_datasink.c  ai_player_datasink.h  datasink_cfg.h  datasink_file.c  datasink_mem.c  datasink_url.c
src/audio_player/src/decoder/: ai_player_decoder.c  ai_player_decoder.h  decoder_cfg.h  decoder_mp3.c  decoder_oggopus.c  decoder_opus.c  decoder_wav.c
src/audio_player/src/decoder/minimp3/: minimp3.h
src/audio_player/src/mixer/: mixer_fixed.c  mixer_fixed.h
src/audio_player/src/resample/: ai_player_resample.c  ai_player_resample.h
src/libaliyun_sdk/src/: hal_util_mutex.c
src/liblvgl/conf/: lv_conf.h
src/tal_cellular/include/: tal_cellular_base.h  tal_cellular_call.h  tal_cellular_keypad.h  tal_cellular_mds.h  tal_cellular_sms.h  tal_cellular_vbat.h
src/tal_cellular/src/: tal_cellular_base.c  tal_cellular_call.c  tal_cellular_keypad.c  tal_cellular_mds.c  tal_cellular_sms.c  tal_cellular_vbat.c
src/tal_driver/dma2d/: tal_dma2d.c
src/tal_kv/: CMakeLists.txt
src/tal_kv/include/: tal_kv.h
src/tal_kv/src/: tal_kv.c
src/tal_network/src/: tal_posix.c
src/tuya_ai_service/svc_ai_agent/: Kconfig
src/tuya_ai_service/svc_ai_basic/: Kconfig
src/tuya_cloud_service/authorize/: tuya_authorize.c
src/tuya_cloud_service/ble/: ble_mgr.c
src/tuya_cloud_service/netmgr/: netconn_cellular.c  netconn_cellular.h  netmgr.c
src/tuya_cloud_service/protocol/: tuya_protocol.c
tools/cli_command/: cli_build.py  cli_new.py
tools/porting/template/: Kconfig
(+140 files in other folders)
